# restoai

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  default.conf
.github/: setenv.sh
.github/workflows/: deploy.yml
src/: apitype.rs  appctx.rs  config.rs  endpoint.rs  main.rs  server.rs  streamer.rs
src/llm/: mod.rs  openai.rs
static/: index.html
tests/: test_client.py
